get ds duong day

--- a/RoleAPI/RoleAPI.csproj
+++ b/RoleAPI/RoleAPI.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RoleDatas\RoleDatas.csproj" />
+    <ProjectReference Include="..\RoleServices\RoleServices.csproj" />
   </ItemGroup>
 
 </Project>
