- Edit Connect String Database. - Remove Temp File.

--- a/RoleAPI/appsettings.json
+++ b/RoleAPI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "DBProvider": "oracle",
-    "ConnectionString": "User Id=sodo1soi;Password=12345;Data Source=SODO1SOI;"
+    "ConnectionString": "Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=10.1.1.21)(PORT=1521))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=FTILIS))); User ID=SODO1SOI;Password=12345;"
   }
 }
