- Lấy dữ liệu diagram.

--- a/RoleAPI/RoleAPI.csproj
+++ b/RoleAPI/RoleAPI.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RoleDatas\RoleDatas.csproj" />
     <ProjectReference Include="..\RoleServices\RoleServices.csproj" />
+    <ProjectReference Include="..\RoleDataModel\RoleDataModel.csproj" />
   </ItemGroup>
 
 </Project>
