--- a/RoleServices/RoleServices.csproj
+++ b/RoleServices/RoleServices.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <ProjectReference Include="..\RoleDatas\RoleDatas.csproj" />
+    <ProjectReference Include="..\RoleDataModel\RoleDataModel.csproj" />
   </ItemGroup>
 
 </Project>
